# Maa-SE

./: .gitattributes  .prettierignore  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  about.toml  licenses.html  rustfmt.toml  tauri.conf.json
src-tauri/crates/app/: Cargo.toml  tauri.conf.json
src-tauri/crates/app/src/: config.rs  core.rs  lib.rs  main.rs  result.rs  updater.rs
src-tauri/crates/maa-callback/: Cargo.toml
src-tauri/crates/maa-callback/src/: callback.rs  callback_types.rs  lib.rs  msg_handler.rs
src-tauri/crates/maa-cfg/: Cargo.toml
src-tauri/crates/maa-cfg/src/: lib.rs  settings.rs  task.rs
src-tauri/crates/maa-core/: Cargo.toml
src-tauri/crates/maa-core/src/: callback.rs  core.rs  lib.rs  msg_handler.rs  tauri_logger.rs
src-tauri/crates/maa-updater/: Cargo.toml
src-tauri/crates/maa-updater/src/: download_reporter.rs  errors.rs  lib.rs  ota.rs  updater.rs  version.rs
src-tauri/src/: main.rs
src/components/: LeftBar.vue  LogViewer.vue  Settings.vue  Task.vue  TaskConfig.vue
src/composables/: useConfig.ts  useLogState.ts  useTaskState.ts
src/views/: MainPage.vue
