[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
tauri-build = { version = "2", features = [] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
anyhow = "1"
config = "0.15.8"

[workspace.dependencies.maa-types]
git = "https://github.com/MaaAssistantArknights/maa-cli"
package = "maa-types"

[workspace.dependencies.maa-sys]
git = "https://github.com/MaaAssistantArknights/maa-cli"
package = "maa-sys"
features = ["runtime"]
