[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
tauri = "2"
tauri-build = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
anyhow = "1"
config = "0.15.8"
dashmap = "6"
log = "0.4"
env_logger = "0.11"
num_enum = "0.7.3"
strum = "0.27.1"

[workspace.dependencies.maa-types]
git = "https://github.com/MaaAssistantArknights/maa-cli"
package = "maa-types"

[workspace.dependencies.maa-sys]
git = "https://github.com/MaaAssistantArknights/maa-cli"
package = "maa-sys"
features = ["runtime"]
