[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "AGPL-3.0-only"

[workspace.dependencies]
tauri = "2"
tauri-build = "2"
tauri-plugin-opener = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
log = "0.4"
log4rs = "1"
strum = { version = "0.27.1", features = ["derive"] }
constcat = "0.6.0"
reqwest = "0.12"
tempfile = "3"
tokio = "1"
zip = "2"
flate2 = "1"
tar = "0.4"
semver = "1"
chrono = "0.4"
fs_extra = "1"
dashmap = "6"
itertools = "0.14"
crossbeam-channel = "0.5"

[workspace.dependencies.maa-types]
git = "https://github.com/MaaAssistantArknights/maa-cli"
package = "maa-types"

[workspace.dependencies.maa-sys]
git = "https://github.com/MaaAssistantArknights/maa-cli"
package = "maa-sys"
features = ["runtime"]

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
