[package]
name = "maa-se"
version = "0.1.0"
description = "A Tauri App"
authors = ["kal'tsit"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "maa_se_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = [] }
tauri-plugin-opener = { workspace = true, features = [] }
serde_json.workspace = true

maa-sys.workspace = true
maa-types.workspace = true
anyhow.workspace = true
env_logger.workspace = true

maa-core = { path = "../maa-core", features = ["tauri-handle"] }
maa-cfg = { path = "../maa-cfg" }
