[package]
name = "maa-cfg"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
log.workspace = true
tokio = { workspace = true, features = ["fs"] }
dashmap = { workspace = true, features = ["serde"] }
itertools.workspace = true
constcat.workspace = true
