[package]
name = "maa-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
maa-sys.workspace = true
maa-types.workspace = true
maa-cfg = { path = "../maa-cfg" }
tauri = { workspace = true, optional = true }
log.workspace = true
log4rs = { workspace = true, optional = true }
strum.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
tauri-handle = ["tauri"]
dynamic-log-level = ["log4rs"]
