[package]
name = "maa-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
maa-sys.workspace = true
maa-cfg = { path = "../maa-cfg" }
maa-callback = { path = "../maa-callback" }
tauri = { workspace = true, optional = true }
log.workspace = true
constcat.workspace = true

log4rs = { workspace = true, optional = true, features = [
    "rolling_file_appender",
    "compound_policy",
    "fixed_window_roller",
    "size_trigger",
] }

[features]
tauri-handle = ["tauri"]
dynamic-log-level = ["log4rs"]
