[package]
name = "maa-updater"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
constcat.workspace = true
strum = { workspace = true, features = ["derive"] }
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["rustls-tls", "json"] }
anyhow.workspace = true
log.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros"] }
zip.workspace = true
semver.workspace = true
chrono.workspace = true
fs_extra.workspace = true

[target.'cfg(linux)'.dependencies]
flate2.workspace = true
tar.workspace = true
